# ToolsForPaperFigures

./: .gitignore  CMakeLists.txt  readme.md
CpuTools/Common/: cpu_Common.cpp  cpu_Common.hpp
CpuTools/ImageEdit/: ImageBorder.cpp  ImageBorder.hpp  ImageCircleAreas.cpp  ImageCircleAreas.hpp  ImageClip.cpp  ImageClip.hpp
CpuTools/ImageError/: ErrorMap.cpp  ErrorMap.hpp  PSNR.cpp  PSNR.hpp
CpuTools/Utility/: cvMat.cpp  cvMat.hpp  timerRandom.cpp  timerRandom.hpp
CudaTools/Common/: cuda_common.cu  cuda_common.cuh
Gui/dataPresent/: DataPresentDockWidget.cpp  DataPresentDockWidget.hpp  DataTreeWidget.cpp  DataTreeWidget.hpp  MemoryRecord.cpp
Gui/mainWidget/: DisplayWidget.cpp  DisplayWidget.hpp  MainGraphicsView.cpp  MainGraphicsView.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  testCode.cpp
Gui/utility/: OpencvToQt.cpp  OpencvToQt.hpp  Status.cpp  Status.hpp  qdoubleslider.cpp  qdoubleslider.hpp
